# PhanesEngine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  LICENSE  PhanesEngine.sln  README.md  compile_commands.json  premake5.lua
DevPlayground/: CMakeLists.txt  DevPlayground.cpp  DevPlayground.vcxproj  DevPlayground.vcxproj.filters  premake5.lua
Engine/Source/Runtime/Core/: CMakeLists.txt  Core.h  Include.h  premake5.lua
Engine/Source/Runtime/Core/HAL/: Platform.h  PlatformTypes.h
Engine/Source/Runtime/Core/Logging/: CMakeLists.txt  Logging.h  LoggingPCH.h  premake5.lua
Engine/Source/Runtime/Core/Logging/private/: Logging.cpp  LoggingPCH.cpp
Engine/Source/Runtime/Core/Math/: Boilerplate.h  Include.h  IntPoint.hpp  IntVector2.hpp  IntVector2.inl  IntVector3.hpp  IntVector3.inl  IntVector4.hpp  IntVector4.inl  Line.hpp  MathCommon.hpp  MathFwd.h  MathPCH.h  MathTypeConversion.hpp  MathTypes.h  MathUnitConversion.hpp  Matrix2.hpp  Matrix3.hpp  Matrix3.inl  Matrix4.hpp  Matrix4.inl  Plane.hpp  Plane.inl  Point.hpp  Quaternion.hpp  Ray.hpp  Vector2.hpp  Vector2.inl  Vector3.hpp  Vector3.inl  Vector4.hpp  Vector4.inl
Engine/Source/Runtime/Core/Math/Detail/: IntVector2Decl.inl  IntVector3Decl.inl  IntVector4Decl.inl  Matrix3Decl.inl  Matrix4Decl.inl  PlaneDecl.inl  Vector2Decl.inl  Vector3Decl.inl  Vector4Decl.inl
Engine/Source/Runtime/Core/Math/SIMD/: Alignment.h  Alignment.hpp  PhanesSIMDTypes.h  PhanesVectorMathAVX.hpp  PhanesVectorMathAVX2.hpp  PhanesVectorMathFPU.hpp  PhanesVectorMathSSE.hpp  Platform.h  SIMDIntrinsics.h  Storage.h
Engine/Source/Runtime/Core/Math/private/: MathPCH.cpp  PhanesMathPCH.cpp
Engine/Source/Runtime/Core/StartingPoint/: CMakeLists.txt  EntryPoint.h  StartingPoint.h  StartingPointPCH.h  premake5.lua
Engine/Source/Runtime/Core/StartingPoint/private/: EntryPoint.cpp  StartingPoint.cpp  StartingPointPCH.cpp
Engine/Source/Runtime/Core/public/HAL/: Platform.h  (+2 more)
(+137 files in other folders)
